Fix bug when navbar collaspsed on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,3 +104,14 @@ body {
         height: calc(100vh - 116px);
     }
 }
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 576px) {
+    .header-container {
+        padding-top: 216px;
+    }
+
+    body {
+        height: calc(100vh - 216px);
+    }
+}
